# blango

./: .pre-commit-config.yaml  .pylintrc  Makefile  comments.sql  db.sqlite3  init.sql  manage.py  pyproject.toml  requirements.txt
.github/workflows/: first-action.yml
blango/: settings.py  urls.py  wsgi.py
blog/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_post_status.py
blog/templatetags/: blog_extras.py
templates/: base.html
templates/blog/: index.html  post-byline.html  post-comments.html  post-detail.html  post-list.html
