[tool.poetry]
name = "blango"
version = "0.1.0"
description = ""
authors = ["Terry A. Brooks, Jr <Terry.Brooks@Learnosity.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.1"
mypy = "1.7.1"
django-stubs = "4.2.7"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
crispy-bootstrap5 = "^2023.10"
django-configurations = "^2.5"
dj-database-url = "^2.1.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
pre-commit = "^3.6.0"
djlint = "^1.34.1"
prospector = {extras = ["with-everything"], version = "^1.10.3"}
coverage = "^7.4.0"


[tool.poetry.group.typing.dependencies]
pyannotate = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = "3.12"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true

[tool.django-stubs]
django_settings_module = "blango.settings"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py37']

[tool.pylint]
ignore="CO301"